loading to vector db

--- a/rag_test.ipynb
+++ b/rag_test.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 194,
    "id": "47434dd9",
    "metadata": {},
    "outputs": [
@@ -51,7 +51,7 @@
        "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -706,89 +706,221 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 210,
    "id": "57626cb8",
    "metadata": {},
    "outputs": [],
    "source": [
     "import uuid\n",
-    "from langchain.vectorstores import Chroma\n",
+    "import os\n",
+    "from langchain_astradb import AstraDBVectorStore\n",
     "from langchain.storage import InMemoryStore\n",
-    "from langchain.schema.document import Document\n",
+    "from langchain_core.documents import Document\n",
     "from langchain.embeddings import OpenAIEmbeddings\n",
     "from langchain.retrievers.multi_vector import MultiVectorRetriever"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dc030423",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d71854dc",
+   "execution_count": 199,
+   "id": "6bcd3f52",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_community.document_loaders import UnstructuredPDFLoader\n",
+    "token = os.getenv('ASTRA_DB_APPLICATION_TOKEN')\n",
+    "namespace = os.getenv('ASTRA_DB_KEYSPACE')\n",
+    "endpoint = os.getenv('ASTRA_DB_API_ENDPOINT')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "id": "dc030423",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## The vector store to index the summary chunks\n",
+    "vector_store = AstraDBVectorStore(\n",
+    "    embedding=OpenAIEmbeddings(),\n",
+    "    collection_name=\"multi_model_rag\",\n",
+    "    api_endpoint=endpoint,\n",
+    "    token=token,\n",
+    "    namespace=namespace,\n",
+    ")\n",
     "\n",
-    "output_path = './content/'\n",
-    "file_path = output_path + 'llava.pdf'\n",
+    "## The storage layer for the parent documents\n",
+    "store = InMemoryStore()\n",
+    "id_key = \"doc_id\"\n",
     "\n",
-    "chunks_lang = UnstructuredPDFLoader(\n",
-    "    file_path=file_path,\n",
-    "    mode='elements',                ## mode can be 'elements' or 'elements_and_text'\n",
-    "    \n",
-    "    unstructured_kwargs={\n",
-    "    'infer_tables_structure':True,           ## extract tables with structure\n",
-    "    'strategy':'hi_res',                     ## mandatory to infer tables\n",
-    "    \n",
-    "    'extract_image_block_types':[\"Image\"],   ## Add 'Table' to list to extract tables as images\n",
-    "    'image_output_dir_path' : output_path,   ## Directory to save images\n",
-    "    \n",
-    "    'extract_image_block_to_payload':True,    ## if true will extract the metadata element which contains the base64 object of the image\n",
-    "                                            ## This is must when sending the image to LLMs\n",
-    "    \n",
-    "    #'chunking_strategy' : \"by_title\",         ## chunking strategy to use, can be 'by_title', 'by_page', 'by_section', 'by_paragraph'\n",
-    "    #'max_characters': 2000,                   ## maximum number of characters per chunk.\n",
-    "    #'combine_text_under_n_chars' : 2000,\n",
-    "    #'new_after_n_chars' : 6000,\n",
-    "    }\n",
-    ")"
+    "## The retriever (empty to start)\n",
+    "retriever = MultiVectorRetriever(\n",
+    "    vectorstore=vector_store,  ## The vector store to index the summary chunks\n",
+    "    docstore=store,            ## The storage layer for the parent documents\n",
+    "    id_key=id_key,\n",
+    ")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36539ae4",
+   "metadata": {},
+   "source": [
+    "### Loading the Summaries and Linking to the original data"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03722f1a",
+   "id": "fed3887b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## adding the texts\n",
+    "## Generate unique IDs for each text chunk \n",
+    "doc_ids = [str(uuid.uuid4()) for _ in texts]\n",
+    "## Creating Langchain Document objects for each text_summary chunk\n",
+    "summary_texts = [Document(page_content=summary,metadata={id_key:doc_ids[i]}) for i,summary in enumerate(text_summaries)]\n",
+    "\n",
+    "## indexing the documents in vector store and document store\n",
+    "retriever.vectorstore.add_documents(summary_texts)\n",
+    "retriever.docstore.mset(list(zip(doc_ids,texts)))\n",
+    "\n",
+    "## adding images summaries\n",
+    "img_ids = [str(uuid.uuid4()) for _ in images]\n",
+    "## Creating Langchain Document objects for each image_summary chunk\n",
+    "summary_images = [Document(page_content=summary,metadata={id_key:img_ids[i]}) for i,summary in enumerate(image_summaries)]\n",
+    "## indexing the documents in vector store and document store\n",
+    "retriever.vectorstore.add_documents(summary_images)\n",
+    "retriever.docstore.mset(list(zip(img_ids,images)))\n",
+    "## Now the retriever is ready to use"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 245,
+   "id": "3574c4b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## adding image summries\n",
+    "def loading_summaries_to_vector_store(retriever, chunks, chunk_summary):\n",
+    "    \"\"\"\n",
+    "        Generate ids for each chunk, create langchain document object for each summry chunk.\n",
+    "        Indexing the summary in vector store and document in docsotre.\n",
+    "    \"\"\"\n",
+    "    ## generate unique id for each chunk\n",
+    "    doc_ids = [str(uuid.uuid4()) for _ in texts]\n",
+    "    ## Creating Langchain Document objects for each text_summary chunk\n",
+    "    summary_texts = [Document(page_content=summary,metadata={id_key:doc_ids[i]}) for i,summary in enumerate(chunk_summary)]\n",
+    "    \n",
+    "    ## indexing the documents in vector store and document store\n",
+    "    retriever.vectorstore.add_documents(summary_texts)\n",
+    "    retriever.docstore.mset(list(zip(doc_ids,chunks)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 246,
+   "id": "37ccd9f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## adding text summaries to vector store and document store\n",
+    "loading_summaries_to_vector_store(retriever,texts,text_summaries)\n",
+    "## adding image summaries to vector store and document store\n",
+    "loading_summaries_to_vector_store(retriever,images,image_summaries)\n",
+    "## Now the retriever is ready to use"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 251,
+   "id": "9ae1e269",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc = retriever.invoke(\"What is multihead attention?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 263,
+   "id": "c429c722",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'Footer', 'ListItem', 'NarrativeText', 'Title', 'UncategorizedText'}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.2.2 Multi-Head Attention\n",
+      "\n",
+      "Instead of performing a single attention function with dmodel-dimensional keys, values and queries, we found it beneficial to linearly project the queries, keys and values h times with different, learned linear projections to dk, dk and dv dimensions, respectively. On each of these projected versions of queries, keys and values we then perform the attention function in parallel, yielding dv-dimensional\n",
+      "\n",
+      "‘To illustrate why the dot products get large, assume that the components of q and k are independent random variables with mean 0 and variance 1. Then their dot product, g -k = ves, qiki, has mean 0 and variance dx.\n",
+      "\n",
+      "4\n",
+      "\n",
+      "output values. These are concatenated and once again projected, resulting in the final values, as depicted in Figure 2.\n",
+      "\n",
+      "Multi-head attention allows the model to jointly attend to information from different representation subspaces at different positions. With a single attention head, averaging inhibits this.\n",
+      "\n",
+      "MultiHead(Q,K,V ) = Concat(head1,...,headh)W O where headi = Attention(QW Q i ,KW K i ,V W V i )\n",
+      "\n",
+      "Where the projections are parameter matrices W Q and W O ∈ Rhdv×dmodel. i ∈ Rdmodel×dk, W K i ∈ Rdmodel×dk, W V i ∈ Rdmodel×dv\n",
+      "\n",
+      "In this work we employ h = 8 parallel attention layers, or heads. For each of these we use dk = dv = dmodel/h = 64. Due to the reduced dimension of each head, the total computational cost is similar to that of single-head attention with full dimensionality.\n",
+      "3.2 Attention\n",
+      "\n",
+      "An attention function can be described as mapping a query and a set of key-value pairs to an output, where the query, keys, values, and output are all vectors. The output is computed as a weighted sum\n",
+      "\n",
+      "3\n",
+      "\n",
+      "Scaled Dot-Product Attention\n",
+      "\n",
+      "Multi-Head Attention\n",
+      "\n",
+      "Linear\n",
+      "\n",
+      "Figure 2: (left) Scaled Dot-Product Attention. (right) Multi-Head Attention consists of several attention layers running in parallel.\n",
+      "\n",
+      "of the values, where the weight assigned to each value is computed by a compatibility function of the query with the corresponding key.\n",
+      "big\n",
+      "\n",
+      "6\n",
+      "\n",
+      "1024\n",
+      "\n",
+      "4096\n",
+      "\n",
+      "16\n",
+      "\n",
+      "0.3\n",
+      "\n",
+      "300K 4.33\n",
+      "\n",
+      "26.4\n",
+      "\n",
+      "development set, newstest2013. We used beam search as described in the previous section, but no checkpoint averaging. We present these results in Table 3.\n",
+      "\n",
+      "In Table 3 rows (A), we vary the number of attention heads and the attention key and value dimensions, keeping the amount of computation constant, as described in Section 3.2.2. While single-head attention is 0.9 BLEU worse than the best setting, quality also drops off with too many heads.\n",
+      "\n",
+      "In Table 3 rows (B), we observe that reducing the attention key size dk hurts model quality. This suggests that determining compatibility is not easy and that a more sophisticated compatibility function than dot product may be beneficial. We further observe in rows (C) and (D) that, as expected, bigger models are better, and dropout is very helpful in avoiding over-fitting. In row (E) we replace our sinusoidal positional encoding with learned positional embeddings [9], and observe nearly identical results to the base model.\n",
+      "3.2.3 Applications of Attention in our Model\n",
+      "\n",
+      "The Transformer uses multi-head attention in three different ways:\n",
+      "\n",
+      "• In \"encoder-decoder attention\" layers, the queries come from the previous decoder layer, and the memory keys and values come from the output of the encoder. This allows every position in the decoder to attend over all positions in the input sequence. This mimics the typical encoder-decoder attention mechanisms in sequence-to-sequence models such as [38, 2, 9].\n",
+      "\n",
+      "• The encoder contains self-attention layers. In a self-attention layer all of the keys, values and queries come from the same place, in this case, the output of the previous layer in the encoder. Each position in the encoder can attend to all positions in the previous layer of the encoder.\n",
+      "\n",
+      "• Similarly, self-attention layers in the decoder allow each position in the decoder to attend to all positions in the decoder up to and including that position. We need to prevent leftward information flow in the decoder to preserve the auto-regressive property. We implement this inside of scaled dot-product attention by masking out (setting to −∞) all values in the input of the softmax which correspond to illegal connections. See Figure 2.\n"
+     ]
     }
    ],
    "source": [
-    "data = chunks_lang.load()\n",
-    "\n",
-    "set(doc.metadata[\"category\"] for doc in data)"
+    "for d in doc:\n",
+    "    print(d)"
    ]
   },
   {
