function for nodes build

--- a/Projects/MultiModal_RAG/rag_test.ipynb
+++ b/Projects/MultiModal_RAG/rag_test.ipynb
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "be7f9d4e",
    "metadata": {},
    "outputs": [
@@ -466,14 +466,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": null,
    "id": "ccbbf72c",
    "metadata": {},
    "outputs": [],
    "source": [
     "## Summarizing Text\n",
     "\n",
-    "## Create a Groq model\n",
+    "## Create a OpenAI model\n",
     "model = ChatOpenAI(temperature=0.5, model='gpt-4o-mini')\n",
     "\n",
     "## Create a prompt template for summarization\n",
@@ -490,7 +490,7 @@
     "\n",
     "prompt_template = ChatPromptTemplate.from_template(prompt)\n",
     "\n",
-    "## chain the prompt with the Groq model and output parser\n",
+    "## chain the prompt with the Open AI model and output parser\n",
     "chain = prompt_template | model | StrOutputParser()\n"
    ]
   },
