RAG agent updated

--- a/Projects/MultiModal_RAG/rag_test.ipynb
+++ b/Projects/MultiModal_RAG/rag_test.ipynb
@@ -81,18 +81,11 @@
    "execution_count": 2,
    "id": "016bb26b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\ashut\\OneDrive\\Documents\\study material\\Agentic_AI_Krish\\Projects\\MultiModel RAG\\venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from unstructured.partition.pdf import partition_pdf\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
     "\n",
     "output_path = './content/'\n",
     "file_path = output_path + 'attention.pdf'\n",
@@ -105,7 +98,7 @@
     "        infer_tables_structure=True,          # Extract tables with structure\n",
     "        strategy='hi_res',                     # Mandatory to infer tables\n",
     "        \n",
-    "        extract_image_block_types=[\"Image\",\"Table\"],   # Add 'Table' to list to extract tables as images\n",
+    "        extract_image_block_types=[\"Image\"],   # Add 'Table' to list to extract tables as images\n",
     "        # image_output_dir_path=output_path,    # Directory to save images\n",
     "        \n",
     "        extract_image_block_to_payload=True,   # Extract metadata element containing base64 object of the image\n",
