travel agent complted

--- a/AI_Travel_Agent/travel_agent.ipynb
+++ b/AI_Travel_Agent/travel_agent.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "56844fd8",
    "metadata": {},
    "outputs": [],
@@ -70,20 +70,16 @@
     "import os\n",
     "from dotenv import load_dotenv\n",
     "load_dotenv()\n",
-    "import operator\n",
-    "from typing import Annotated, Sequence, List,Optional, Any, Dict\n",
+    "from typing import  List,Optional, Any, Dict\n",
     "from pydantic import BaseModel, Field\n",
-    "from langchain_core.output_parsers import StrOutputParser, PydanticOutputParser\n",
-    "from langchain_core.prompts import ChatPromptTemplate, PromptTemplate\n",
-    "from langchain_core.messages import HumanMessage, SystemMessage, BaseMessage, AIMessage\n",
+    "from langchain_core.messages import HumanMessage, SystemMessage, AIMessage\n",
     "from langchain_openai import ChatOpenAI\n",
     "from langgraph.graph import START, END, MessagesState, StateGraph\n",
     "from langgraph.prebuilt import ToolNode, tools_condition\n",
     "from langchain.tools import tool\n",
     "import requests\n",
-    "from langchain_community.utilities import GoogleSerperAPIWrapper, GooglePlacesAPIWrapper\n",
+    "from langchain_community.utilities import GoogleSerperAPIWrapper\n",
     "from langchain_community.tools import  DuckDuckGoSearchRun\n",
-    "from langchain_community.utilities import OpenWeatherMapAPIWrapper\n",
     "from langchain_community.tools.tavily_search import TavilySearchResults\n",
     "from datetime import date, datetime"
    ]
@@ -213,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "64929d88",
    "metadata": {},
    "outputs": [],
@@ -242,8 +238,7 @@
     "        return result\n",
     "    \n",
     "    \n",
-    "    @staticmethod\n",
-    "    def calculate_daily_budget(total_cost: float, days: int) -> float:\n",
+    "    def calculate_daily_budget(self,total_cost: float, days: int) -> float:\n",
     "        '''\n",
     "        Calculate the daily budget based on total cost and number of days.\n",
     "        Args:\n",
@@ -1251,9 +1246,7 @@
    "id": "0e048de3",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import streamlit as st"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
